--- a/entrance_coding/requirements.txt
+++ b/entrance_coding/requirements.txt
@@ -1,122 +1,31 @@
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asgiref==3.4.1
-attrs==21.4.0
 backcall==0.2.0
-black==21.6b0
-bleach==4.1.0
-boto3==1.18.26
-boto3-stubs==1.17.109
-botocore==1.21.26
-botocore-stubs==1.20.109
-certifi==2021.5.30
-cffi==1.14.6
-charset-normalizer==2.0.4
-click==8.0.1
-colorama==0.4.4
-cryptography==3.4.7
+cycler==0.11.0
 debugpy==1.5.1
 decorator==5.1.1
-defusedxml==0.7.1
-distlib==0.3.4
-dnspython==2.1.0
-ecdsa==0.17.0
-email-validator==1.1.3
 entrypoints==0.3
-envs==1.3
-fastapi==0.68.0
-filelock==3.4.2
-future==0.18.2
-greenlet==1.1.1
-h11==0.12.0
-httptools==0.2.0
-idna==3.2
-importlib-resources==5.4.0
+fonttools==4.28.5
 ipykernel==6.6.1
 ipython==7.31.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
 jedi==0.18.1
-Jinja2==3.0.3
-jose==1.0.0
-jsonschema==4.3.3
-jupyter==1.0.0
 jupyter-client==7.1.0
-jupyter-console==6.4.0
 jupyter-core==4.9.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.2
-MarkupSafe==2.0.1
+kiwisolver==1.3.2
+matplotlib==3.5.1
 matplotlib-inline==0.1.3
-mistune==0.8.4
-mypy-boto3==1.17.109
-mypy-boto3-cloudformation==1.17.109
-mypy-boto3-cognito-idp==1.18.26
-mypy-boto3-dynamodb==1.17.109
-mypy-boto3-ec2==1.17.109
-mypy-boto3-lambda==1.17.109
-mypy-boto3-rds==1.17.109
-mypy-boto3-s3==1.17.109
-mypy-boto3-sqs==1.17.109
-mypy-extensions==0.4.3
-nbclient==0.5.9
-nbconvert==6.4.0
-nbformat==5.1.3
 nest-asyncio==1.5.4
-notebook==6.4.6
-numpy==1.21.0
+numpy==1.22.0
 packaging==21.3
-pandocfilters==1.5.0
 parso==0.8.3
-pathspec==0.8.1
 pexpect==4.8.0
 pickleshare==0.7.5
-platformdirs==2.4.1
-prometheus-client==0.12.0
+Pillow==9.0.0
 prompt-toolkit==3.0.24
-psycopg2==2.9.1
-psycopg2-binary==2.9.1
 ptyprocess==0.7.0
-pyasn1==0.4.8
-pycparser==2.20
-pycryptodome==3.3.1
-pydantic==1.8.2
 Pygments==2.11.2
-PyJWT==2.1.0
 pyparsing==3.0.6
-pyrsistent==0.18.0
 python-dateutil==2.8.2
-python-dotenv==0.19.0
-python-jose==3.3.0
-python-jose-cryptodome==1.3.2
-python-multipart==0.0.5
-PyYAML==5.4.1
 pyzmq==22.3.0
-qtconsole==5.2.2
-QtPy==2.0.0
-regex==2021.7.1
-requests==2.26.0
-rsa==4.7.2
-s3transfer==0.5.0
-Send2Trash==1.8.0
 six==1.16.0
-SQLAlchemy==1.4.22
-sqlitedict==1.7.0
-starlette==0.14.2
-terminado==0.12.1
-testpath==0.5.0
 tornado==6.1
 traitlets==5.1.1
-typing-extensions==3.10.0.0
-ujson==4.0.2
-urllib3==1.26.6
-uvicorn==0.15.0
-uvloop==0.15.2
-virtualenv==20.13.0
-watchgod==0.7
 wcwidth==0.2.5
-webencodings==0.5.1
-websockets==9.1
-widgetsnbextension==3.5.2
-wincertstore==0.2
-zipp==3.7.0
